--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3"
 services:
   app:
     build: .
+    volumes:
+      - ./src:/app/src
     ports:
       - 1993:1993
     restart: unless-stopped
